# minify-html

./: .clang-format  .gitignore  .gitmodules  .rustfmt.toml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  README.md  build.rs  compile.sh  format  package.json  prebuild.sh  preprocess.sh  test.sh  test_preserve_attr_case.html  test_runner.rs  tsconfig.json  version
.cargo/: config.toml
archive/: old.readme.md  quoted.rs
bench/: .gitignore  README.md  bench.js  bench.sh  build  build.sh  compare.sh  fetch.js  graph.js  install.sh  minification.json  minifiers.js  package.json  profile.sh  results.js  run  run.js  sizes.js  speed.json  speeds.js  tests.js
bench/minify-html-bench/: Cargo.toml
bench/minify-html-bench/src/: main.rs
bench/runners/minify-html/: Cargo.toml  run
bench/runners/minify-html-onepass/: Cargo.toml  build  run
bench/runners/minify-html-onepass (Rust)/: Cargo.toml
bench/runners/minify-html-onepass (Rust)/src/: main.rs
bench/runners/minify-html-onepass/src/: main.rs
bench/runners/minify-html/src/: main.rs
cli/: CMakeLists.txt  Cargo.toml  README.md
cli/src/: main.rs
cli/src/hbcli/: err.c  err.h  hb-cli.c  hb-config.h  hb-proc.h  main.c  opt.c  opt.h
cli/src/hbcli/arg/: suppress.c  tags.c
dart/: pubspec.yaml
dart/native/: Cargo.toml
dart/native/src/: lib.rs
fuzz/: .gitignore  Cargo.toml  README.md
java/: .gitignore  Cargo.toml  build.sh  pom.xml
lib/: nicehash
minhtml/: Cargo.toml  README.md
minhtml/src/: main.rs
minify-html/: Cargo.toml
minify-html-cli/: Cargo.toml
minify-html-common/: Cargo.toml  build.rs  html-data_2023013104.0.0.json  whitespace.rs
minify-html-common/src/: lib.rs  pattern.rs  whitespace.rs
minify-html-common/src/spec/: script.rs
minify-html-common/src/spec/tag/: ns.rs  omission.rs  void.rs  whitespace.rs
minify-html-common/src/tests/: mod.rs
minify-html-java/: Cargo.toml  build  lombok.config  pom.xml  update-java.sh
minify-html-nodejs/: Cargo.toml  index.d.ts  index.js  package.json  postinstall.js
minify-html-nodejs/plat-pkg/: README.md  package.json.gen.js
minify-html-nodejs/src/: lib.rs
minify-html-onepass/: Cargo.toml  README.md
minify-html-onepass-python/: Cargo.toml
minify-html-onepass-python/src/: lib.rs
minify-html-onepass/src/: err.rs  lib.rs
minify-html-onepass/src/cfg/: mod.rs
minify-html-onepass/src/proc/: checkpoint.rs  entity.rs  mod.rs  range.rs
minify-html-onepass/src/tests/: mod.rs
minify-html-onepass/src/unit/: bang.rs  comment.rs  content.rs  instruction.rs  script.rs  style.rs  tag.rs
minify-html-onepass/src/unit/attr/: mod.rs  value.rs
minify-html-python/: Cargo.toml  minify_html.pyi
minify-html-python/src/: lib.rs
minify-html-ruby/: Cargo.toml  Rakefile  minify_html.gemspec
minify-html-ruby/ext/minify_html/: Cargo.toml  extconf.rb
minify-html-ruby/ext/minify_html/src/: lib.rs
minify-html-wasm/: Cargo.toml  build  deno.json  index.cloudflare.js
minify-html/src/: lib.rs
minify-html/src/ast/: c14n.rs  mod.rs
minify-html/src/cfg/: mod.rs
minify-html/src/entity/: decode.rs  encode.rs
minify-html/src/entity/tests/: encode.rs
minify-html/src/minify/: attr.rs  bang.rs  comment.rs  content.rs  css.rs  doctype.rs  element.rs  instruction.rs  js.rs  mod.rs  rcdata.rs
minify-html/src/minify/tests/: attr.rs
minify-html/src/parse/: bang.rs  comment.rs  content.rs  doctype.rs  element.rs  instruction.rs  mod.rs  script.rs  style.rs  textarea.rs  title.rs
minify-html/src/parse/tests/: element.rs  mod.rs
minify-html/src/tag/: mod.rs
minify-html/src/tests/: mod.rs
nodejs/: .gitignore  Cargo.toml  binding.c  binding.gyp  build.sh  buildnative.js  cli.js  compress.js  index.d.ts  install.js  package.json  package.json.gen.js  postinstall.js  tsconfig.json
nodejs/.cargo/: config
nodejs/lib/: index.js
nodejs/native/: Cargo.toml  build.rs
nodejs/native/src/: lib.rs
nodejs/src/: index.ts  lib.rs
notes/: Parsing.md  Processing module.md  Processing.md  Script data.md  Tag omission.md  Tag types.md  Text script content.md
python/: .gitignore  Cargo.core.toml  Cargo.js.toml  Cargo.toml  MANIFEST.in  minify.pyi  prepare.py  setup.py
python/hyperbuild/: __init__.py
python/main/: .gitignore  Cargo.toml
python/main/src/: lib.rs
python/onepass/: Cargo.toml  README.md  minify_html_onepass.pyi  pyproject.toml
python/onepass/src/: lib.rs
python/src/: lib.rs  lib.template.rs
ruby/: .gitignore  Cargo.toml  hyperbuild.gemspec  minify_html.gemspec
rust/common/: .gitignore  Cargo.toml  mod.rs  whitespace.rs
rust/common/spec/: script.rs
rust/common/spec/tag/: omission.rs  void.rs  whitespace.rs
rust/common/src/: lib.rs  pattern.rs  whitespace.rs
rust/common/src/spec/: script.rs
rust/common/src/spec/entity/: decode.rs  encode.rs
rust/common/src/tests/: mod.rs
rust/common/tests/: mod.rs
rust/main/: Cargo.toml
rust/main/src/: lib.rs
rust/main/src/ast/: c14n.rs  mod.rs
rust/main/src/cfg/: mod.rs
rust/main/src/entity/: decode.rs  encode.rs
rust/main/src/entity/tests/: encode.rs
rust/main/src/minify/: attr.rs  content.rs  css.rs  doctype.rs  element.rs  esbuild.rs  js.rs  mod.rs  rcdata.rs
rust/main/src/parse/: comment.rs  content.rs  element.rs  instruction.rs  mod.rs  script.rs  style.rs  textarea.rs  title.rs
rust/main/src/parse/tests/: element.rs
rust/main/src/tag/: mod.rs
rust/main/src/tests/: mod.rs
rust/onepass/: Cargo.toml  README.md
rust/onepass/src/: err.rs  lib.rs
rust/onepass/src/cfg/: mod.rs
rust/onepass/src/proc/: entity.rs  mod.rs  range.rs
rust/onepass/src/tests/: mod.rs
rust/onepass/src/unit/: content.rs  mod.rs  script.rs  style.rs  tag.rs
rust/onepass/src/unit/attr/: mod.rs  value.rs
src/: __main__.c  cfg.h  cli.c  code.rs  err.rs  hb-cli.c  hb-config.c  hb-data.h  hb-error.h  hb-file-in.c  hb-file-out.c  hb-file.h  hb-proc-accept.c  hb-proc-core.c  hb-proc-matches.c  hb-proc-peek.c  hb-proc-require.c  hb-proc-skip.c  hb-proc-write.c  hb-unit-attribute-value-quoted.c  hb-unit-attribute-value-unquoted.c  hb-unit-attribute.c  hb-unit-bang.c  (+15 more)
(+447 files in other folders)
