[workspace]
members = [
  "bench/runners/minify-html-onepass",
  "bench/runners/minify-html",
  "debug/diff/c14n",
  "debug/diff/charlines",
  "fuzz",
  "fuzz/process",
  "minify-html-cli",
  "minify-html-common",
  "minify-html-java",
  "minify-html-nodejs",
  "minify-html-onepass-python",
  "minify-html-onepass",
  "minify-html-python",
  "minify-html-ruby",
  "minify-html-wasm",
  "minify-html",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
