[package]
publish = false
name = "minify-html-cli"
description = "Extremely fast and smart HTML + JS + CSS minifier"
version = "0.11.1"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[dependencies]
minify-html = { path = "../rust/main" }
rayon = "1.5"
structopt = "0.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
