[package]
name = "minify-html-nodejs"
publish = false
version = "0.11.2"
description = "Node.js bindings for minify-html"
authors = ["Wilson Lin <npm@wilsonl.in>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
minify-html = { path = "../minify-html" }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-1", "try-catch-api"]
