[package]
publish = false
name = "minify-html-onepass-python"
description = "Even faster version of minify-html"
license = "MIT"
homepage = "https://github.com/wilsonzlin/minify-html"
readme = "README.md"
repository = "https://github.com/wilsonzlin/minify-html.git"
version = "0.18.1"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
minify-html-onepass = { path = "../minify-html-onepass" }
pyo3 = { "version" = "0.27", features = ["extension-module", "generate-import-lib"] }
