[package]
name = "minify-html-onepass"
description = "Even faster version of minify-html"
license = "MIT"
homepage = "https://github.com/wilsonzlin/minify-html"
readme = "README.md"
keywords = ["html", "compress", "minifier", "js", "css"]
categories = ["compression", "command-line-utilities", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/wilsonzlin/minify-html.git"
version = "0.11.3"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
aho-corasick = "0.7"
css-minify = "0.3.1"
lazy_static = "1.4"
memchr = "2"
minify-html-common = { version = "0.0.1", path = "../minify-html-common" }
minify-js = "0.4.2"
rustc-hash = "1.1.0"
