[package]
name = "minify-html-onepass"
description = "Even faster version of minify-html"
license = "MIT"
homepage = "https://github.com/wilsonzlin/minify-html"
readme = "README.md"
keywords = ["html", "compress", "minifier", "js", "css"]
categories = ["compression", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/wilsonzlin/minify-html.git"
version = "0.16.5"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ahash = "0.8"
aho-corasick = "0.7"
lightningcss = "1.0.0-alpha.65"
memchr = "2"
minify-html-common = { version = "0.0.2", path = "../minify-html-common" }
minify-js = "0.6"
once_cell = "1.19.0"
