[package]
publish = false
name = "minify_html"
description = "Extremely fast and smart HTML + JS + CSS minifier"
license = "MIT"
homepage = "https://github.com/wilsonzlin/minify-html"
readme = "README.md"
repository = "https://github.com/wilsonzlin/minify-html.git"
version = "0.11.2"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[lib]
name = "minify_html"
crate-type = ["cdylib"]

[dependencies]
minify-html = { path = "../minify-html" }
[dependencies.pyo3]
version = "0.17.2"
features = ["extension-module", "generate-import-lib"]
