[package]
publish = false
name = "minify-html-python"
description = "Extremely fast and smart HTML + JS + CSS minifier"
license = "MIT"
homepage = "https://github.com/wilsonzlin/minify-html"
readme = "README.md"
repository = "https://github.com/wilsonzlin/minify-html.git"
version = "0.16.3"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
minify-html = { path = "../minify-html" }
pyo3 = { "version" = "0.24.0", features = ["extension-module", "generate-import-lib"] }
