[package]
name = "minify-html"
description = "Extremely fast and smart HTML + JS + CSS minifier"
license = "MIT"
homepage = "https://github.com/wilsonzlin/minify-html"
readme = "README.md"
keywords = ["html", "compress", "minifier", "js", "css"]
categories = ["compression", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/wilsonzlin/minify-html.git"
version = "0.13.2"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
aho-corasick = "0.7"
lazy_static = "1.4"
lightningcss = "1.0.0-alpha.51"
memchr = "2"
minify-html-common = { version = "0.0.1", path = "../minify-html-common" }
minify-js = "0.5.6"
rustc-hash = "1.1.0"
