[package]
name = "minify-html"
description = "Extremely fast and smart HTML + JS + CSS minifier"
license = "MIT"
homepage = "https://github.com/wilsonzlin/minify-html"
readme = "README.md"
keywords = ["html", "compress", "minifier", "js", "css"]
categories = ["compression", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/wilsonzlin/minify-html.git"
version = "0.16.4"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ahash = "0.8"
aho-corasick = "0.7"
lightningcss = { version = "1.0.0-alpha.65", optional = true }
memchr = "2"
minify-html-common = { version = "0.0.2", path = "../minify-html-common" }
minify-js = { version = "0.6", optional = true }
once_cell = "1.19.0"

[features]
default = ["lightningcss", "minify-js"]
lightningcss = ["dep:lightningcss"]
minify-js = ["dep:minify-js"]
