[package]
name = "minify-html"
description = "Extremely fast and smart HTML + JS + CSS minifier"
license = "MIT"
homepage = "https://github.com/wilsonzlin/minify-html"
readme = "README.md"
keywords = ["html", "compress", "minifier", "js", "css"]
categories = ["compression", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/wilsonzlin/minify-html.git"
version = "0.17.0"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ahash = "0.8"
aho-corasick = "1.1"
lightningcss = "1.0.0-alpha.68"
memchr = "2"
minify-html-common = { version = "0.0.3", path = "../minify-html-common" }
once_cell = "1.21"
oxc_allocator = "0.95"
oxc_codegen = "0.95"
oxc_minifier = "0.95"
oxc_parser = "0.95"
oxc_span = "0.95"
