[package]
publish = false
name = "minify_html"
description = "Fast and smart HTML + JS minifier"
license = "MIT"
homepage = "https://github.com/wilsonzlin/minify-html"
readme = "README.md"
repository = "https://github.com/wilsonzlin/minify-html.git"
version = "0.3.6"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[lib]
name = "minify_html"
crate-type = ["cdylib"]

[dependencies]
minify-html = { path = "..", features = ["js-esbuild"] }
[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]
