[package]
name = "minify-html-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "minifyhtml"
crate-type = ["cdylib"]

[dependencies]
minify-html = { version = "0.10.8", path = "../../rust/main" }
