[package]
publish = false
name = "minify-html-nodejs"
version = "0.2.4"
authors = ["Wilson Lin <code@wilsonl.in>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "minify_html_nodejs_lib"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
minify-html = { path = "../..", features = ["js-esbuild"] }
neon = "0.4.0"
