[package]
publish = false
name = "minify-html-ffi"
version = "0.6.7"
authors = ["Wilson Lin <code@wilsonl.in>"]
license = "MIT"
edition = "2018"

[lib]
name = "minify_html_ffi"
crate-type = ["staticlib"]

[features]
core = ["minify-html"]
js = ["minify-html/js-esbuild"]

[build-dependencies]
cbindgen = "0.14"

[dependencies]
libc = "0.2"
minify-html = { path = "../../rust/main", optional = true }
