[package]
publish = false
name = "minify_html_onepass"
description = "Even faster version of minify-html"
license = "MIT"
homepage = "https://github.com/wilsonzlin/minify-html"
readme = "README.md"
repository = "https://github.com/wilsonzlin/minify-html.git"
version = "0.10.3"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[lib]
name = "minify_html_onepass"
crate-type = ["cdylib"]

[dependencies]
minify-html-onepass = { path = "../../rust/onepass" }
[dependencies.pyo3]
version = "0.17.2"
features = ["extension-module"]
