[package]
name = "minify-html"
description = "Extremely fast and smart HTML + JS + CSS minifier"
license = "MIT"
homepage = "https://github.com/wilsonzlin/minify-html"
readme = "README.md"
keywords = ["html", "compress", "minifier", "js", "css"]
categories = ["compression", "command-line-utilities", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/wilsonzlin/minify-html.git"
version = "0.10.8"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
aho-corasick = "0.7.20"
css-minify = "0.3.1"
lazy_static = "1.4.0"
memchr = "2.5.0"
minify-js = "0.5.6"
rustc-hash = "1.1.0"
