[package]
name = "minify-html-onepass"
description = "Even faster version of minify-html"
license = "MIT"
homepage = "https://github.com/wilsonzlin/minify-html"
readme = "README.md"
keywords = ["html", "compress", "minifier", "js", "css"]
categories = ["compression", "command-line-utilities", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/wilsonzlin/minify-html.git"
version = "0.10.7"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
aho-corasick = "0.7"
css-minify = "0.3.1"
lazy_static = "1.4"
memchr = "2"
minify-js = "0.4.2"
rustc-hash = "1.1.0"
