[package]
name = "minify-html-bench"
publish = false
version = "0.0.1"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[dependencies]
minify-html = { path = "../../../rust/main" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
