[package]
publish = false
name = "minify-html-ruby"
version = "0.11.3"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# rb-sys-dock doesn't support local path deps: https://github.com/oxidize-rb/rb-sys/issues/296
minify-html = "0.11.3"
magnus = "0.6"
